src/assets/css/main.css
@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap');

@font-face {
  font-family: 'space_rangerregular';
  src: url('../font/spaceranger-font/spaceranger-webfont.woff2') format('woff2'),
       url('../font/spaceranger-font/spaceranger-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

:root {
  --font-size: 20px;
  --global-width: 90%;
  --global-margin-fix: 5%;

  --font-color--main: #eee;
  --view-color--one: #030303;
  --view-color--two: #111111;
  --navbar-float: #070707;
  --border--dark: rgb(41, 47, 73);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: var(--font-size);
  height: 100vh;
  font-family: 'Ubuntu', sans-serif;
  color: var(--font-color--main);
}

.brand-font {
  font-family: 'space_rangerregular';
}

.view {
  padding-top: 3rem;
}

